--- a/mingw-w64-jsonnet/PKGBUILD
+++ b/mingw-w64-jsonnet/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=0.20.0
-pkgrel=3
+pkgrel=4
 pkgdesc="The data templating language (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -19,8 +19,10 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-nlohmann-json"
+             "${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
-options=('!strip' '!buildflags')
+options=('!strip')
 source=("${_realname}-${pkgver}.tar.gz::${url}/archive/v${pkgver}.tar.gz"
         '001-jsonnet-0.20.0-cxx17.patch'
         '002-jsonnet-0.20.0-include-nlohmann-json.patch'
@@ -28,7 +30,6 @@ source=("${_realname}-${pkgver}.tar.gz::${url}/archive/v${pkgver}.tar.gz"
         '004-jsonnet-0.20.0-core-runtime.patch'
         '005-jsonnet-0.20.0-cpp-runtime.patch'
         '006-jsonnet-0.20.0-c4core-nopack.patch')
-
 sha256sums=('77bd269073807731f6b11ff8d7c03e9065aafb8e4d038935deb388325e52511b'
             '83dc8dabde1caa87a5d59f945952f61fb1b7d77079d3c849772464674eef6c6d'
             '606fa576a6ad4c71ce5c3bfd5ab6dc9461ccfc36e959830e133123a0cb652c93'
@@ -46,8 +47,6 @@ apply_patch_with_msg() {
 }
 
 prepare() {
-  cp -r "${srcdir}/${_realname}-${pkgver}" "${srcdir}/python-build-${MSYSTEM}"
-
   cd "${srcdir}"/${_realname}-${pkgver}
 
   apply_patch_with_msg \
@@ -74,11 +73,13 @@ build() {
   "${MINGW_PREFIX}"/bin/cmake --build ./
 
   msg "Python build"
+  cp -r "${srcdir}/${_realname}-${pkgver}" "${srcdir}/python-build-${MSYSTEM}"
   cd "${srcdir}/python-build-${MSYSTEM}"
 
   export CFLAGS="$CFLAGS -fPIC"
   export CXXFLAGS="$CXXFLAGS -fPIC"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package_jsonnet() {
@@ -94,8 +95,10 @@ package_python-jsonnet() {
   depends=("${MINGW_PACKAGE_PREFIX}-python")
 
   cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-    ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} --root="${pkgdir}" -O1 --skip-build
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
+
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
 }
 
