--- a/mingw-w64-python-pacdb/PKGBUILD
+++ b/mingw-w64-python-pacdb/PKGBUILD
@@ -7,12 +7,12 @@ pkgver=0.1.0
 pkgrel=4
 pkgdesc="Python module to parse and read pacman sync dbs (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/jeremyd2019/pacdb'
 msys2_references=(
   'pypi: pacdb'
 )
-url='https://github.com/jeremyd2019/pacdb'
-license=('MIT')
+license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-zstandard")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
@@ -22,15 +22,12 @@ source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realna
 sha256sums=('be0b6c3cda82336ca3ab9a6458e273093b88f1ac77af3a39a69a5c427cd77440')
 
 build() {
-  msg "Python build for ${MSYSTEM}"
-  cd "${srcdir}"
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
 
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  msg "Python install for ${MSYSTEM}"
   cd "${srcdir}/python-build-${MSYSTEM}"
 
   MSYS2_ARG_CONV_EXCL="--prefix=" \
