--- a/mingw-w64-python-pycares/PKGBUILD
+++ b/mingw-w64-python-pycares/PKGBUILD
@@ -7,13 +7,14 @@ pkgver=4.5.0
 pkgrel=1
 pkgdesc='Python interface for c-ares (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://github.com/saghul/pycares'
 msys2_references=(
   'pypi: pycares'
 )
-url='https://github.com/saghul/pycares'
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-c-ares"
+         "${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-cffi")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-python-build"
