--- a/mingw-w64-python-zstandard/PKGBUILD
+++ b/mingw-w64-python-zstandard/PKGBUILD
@@ -7,13 +7,13 @@ pkgver=0.23.0
 pkgrel=1
 pkgdesc='Python bindings to the Zstandard (zstd) compression library (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://python-zstandard.readthedocs.io/'
+msys2_repository_url='https://github.com/indygreg/python-zstandard/'
 msys2_references=(
   'archlinux: python-zstandard'
   'pypi: zstandard'
 )
-msys2_repository_url='https://github.com/indygreg/python-zstandard/'
-url='https://python-zstandard.readthedocs.io/'
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
