--- a/mingw-w64-asciidoc/PKGBUILD
+++ b/mingw-w64-asciidoc/PKGBUILD
@@ -4,10 +4,8 @@
 _realname=asciidoc
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-conflicts=("${MINGW_PACKAGE_PREFIX}-asciidoc-py3-git")
-provides=("${MINGW_PACKAGE_PREFIX}-asciidoc-py3-git")
 pkgver=10.2.1
-pkgrel=2
+pkgrel=3
 pkgdesc="AsciiDoc is a text document format for writing notes, documentation, articles, books, ebooks, slideshows, web pages, man pages and blogs (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -15,34 +13,29 @@ url="https://github.com/asciidoc-py/asciidoc-py"
 msys2_references=(
   'pypi: asciidoc'
 )
-license=("GPL")
+license=("spdx:GPL-2.0-or-later")
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-libxslt"
          "${MINGW_PACKAGE_PREFIX}-docbook-xsl")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools" "${MINGW_PACKAGE_PREFIX}-cc")
-source=(asciidoc-py-${pkgver}.tar.gz::${url}/archive/refs/tags/${pkgver}.tar.gz)
-sha256sums=('8e1fb9691952cc4f13357e1ef58172e566c5f88e3c44222d4a8693585f884507')
-
-prepare() {
-  cd "${srcdir}"
-  rm -rf "python-build-${MSYSTEM}" | true
-  cp -r "asciidoc-py-${pkgver}" "python-build-${MSYSTEM}"
-}
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
+             "${MINGW_PACKAGE_PREFIX}-cc")
+options=(!strip)
+source=(https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz)
+sha256sums=('d9f13c285981b3c7eb660d02ca0a2779981e88d48105de81bb40445e60dddb83')
 
 build() {
-  msg "Python build for ${MSYSTEM}"
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-    ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} --root="${pkgdir}" -O1 --skip-build
+  cd "${srcdir}"/python-build-${MSYSTEM}
 
-  for _f in "${pkgdir}${MINGW_PREFIX}"/bin/*-script.py; do
-    sed -e '1 { s/^#!.*$// }' -i ${_f}
-  done
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
-  install -Dm644 COPYRIGHT  "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/COPYRIGHT
+  install -Dm644 LICENSE "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 }
