--- a/mingw-w64-python-docxcompose/PKGBUILD
+++ b/mingw-w64-python-docxcompose/PKGBUILD
@@ -4,7 +4,7 @@ _realname=docxcompose
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-$_realname")
 pkgver=1.4.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Python library for concatenating/appending Microsoft Word (.docx) files (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -13,32 +13,31 @@ msys2_references=(
   'pypi: docxcompose'
 )
 license=('spdx:MIT')
-depends=("${MINGW_PACKAGE_PREFIX}-python-babel"
+depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-python-babel"
          "${MINGW_PACKAGE_PREFIX}-python-docx"
          "${MINGW_PACKAGE_PREFIX}-python-lxml"
          "${MINGW_PACKAGE_PREFIX}-python-setuptools"
          "${MINGW_PACKAGE_PREFIX}-python-six")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
-source=("${url}/archive/${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('9fa667f99289127aae614e83e73f95f682639ccf4438fe073e0baf7fbbe1dbab')
-
-prepare() {
-  cd "${srcdir}"
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+options=(!strip)
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('bcf2799a0b63c29eb77a3d799a2f28443ae0f69f8691ff3d753f706be515c3e9')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  "${MINGW_PREFIX}"/bin/python setup.py install -O1 --skip-build \
-      --root="${pkgdir}" --prefix="${MINGW_PREFIX}"
+  cd "${srcdir}"/python-build-${MSYSTEM}
 
-  install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
+
   install -Dm644 README.rst "${pkgdir}${MINGW_PREFIX}/share/doc/python-${_realname}/README.rst"
 }
 
