--- a/mingw-w64-python-docxtpl/PKGBUILD
+++ b/mingw-w64-python-docxtpl/PKGBUILD
@@ -4,7 +4,7 @@ _realname=docxtpl
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-$_realname")
 pkgver=0.19.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Use a docx as a jinja2 template (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -14,30 +14,28 @@ msys2_references=(
   'pypi: docxtpl'
 )
 license=('spdx:LGPL-2.1-or-later')
-depends=("${MINGW_PACKAGE_PREFIX}-python-docx"
+depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-python-docx"
          "${MINGW_PACKAGE_PREFIX}-python-docxcompose"
          "${MINGW_PACKAGE_PREFIX}-python-jinja"
-         "${MINGW_PACKAGE_PREFIX}-python-lxml"
-         "${MINGW_PACKAGE_PREFIX}-python-six")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
+         "${MINGW_PACKAGE_PREFIX}-python-black")
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-poetry-core")
 source=("https://pypi.io/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
 sha256sums=('5836aab5583a82e2e81b086fae130ce94dc080f6b7fe0e43f83f4e3e3e5daecf')
 
-prepare() {
-  cd "${srcdir}"
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
-
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  "${MINGW_PREFIX}"/bin/python setup.py install -O1 --skip-build \
-      --root="${pkgdir}" --prefix="${MINGW_PREFIX}"
+  cd "${srcdir}"/python-build-${MSYSTEM}
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 LICENSE.txt "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE.txt"
   install -Dm644 README.rst "${pkgdir}${MINGW_PREFIX}/share/doc/python-${_realname}/README.rst"
